--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.0",
     "geolib": "^3.3.4",
     "mongodb": "^6.9.0",
